--- a/client-side/libertasBoardRoom/package.json
+++ b/client-side/libertasBoardRoom/package.json
@@ -18,9 +18,11 @@
     "react-native": "0.68.2",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-paper": "^4.12.2",
     "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
