--- a/client-side/libertasBoardRoom/package.json
+++ b/client-side/libertasBoardRoom/package.json
@@ -10,20 +10,36 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@mdi/js": "^6.9.96",
+    "@mdi/react": "^1.6.0",
+    "@react-native-async-storage/async-storage": "^1.17.7",
+    "@react-native-community/checkbox": "^0.5.12",
+    "@react-native-community/datetimepicker": "^6.2.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/drawer": "^6.4.3",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
+    "@reduxjs/toolkit": "^1.8.3",
+    "axios": "^0.27.2",
+    "moment": "^2.29.4",
     "react": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-date-picker": "^4.2.3",
+    "react-native-dropdown-picker": "^5.4.2",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-mmkv": "^2.4.3",
+    "react-native-mmkv-storage": "^0.7.6",
+    "react-native-modal-datetime-picker": "^13.1.2",
     "react-native-paper": "^4.12.2",
     "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
+    "react-native-svg-charts": "^5.4.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-navigation-stack": "^2.10.4"
+    "react-navigation-stack": "^2.10.4",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
